--- a/prod/sass/partial/about-us.scss
+++ b/prod/sass/partial/about-us.scss
@@ -13,16 +13,21 @@
 		@include gridle_state(phoness tabless-min) {
 			padding:0;
 		}
+		@include gridle_state(tabless-md) {
+			margin-top: 55px;
+			height: 93%;
+		} 
 		@include gridle_state(phoness) {
-			padding:{bottom:50px;}
+			margin-top: 55px;
+			height: 85%;
+		} 
+		@include gridle_state(phoness-min) {
+			margin-top: 40px;
+			height: 93%;
 		}
 		.encabezado {
 			background-size: cover;
 			height: 100%;
-			@include gridle_state(phoness) {
-				height: auto !important;
-				padding:{bottom: 50px;}
-			}
 			.content-title {
 				@include gridle_state(desktopess notebook-min) { 
 				 display: block;
@@ -32,7 +37,7 @@
 				 	  padding:{top: 50px;}
 				 }
 				  @include gridle_state(phoness-min) {
-				 	  padding:{top: 50px;}
+				 	  padding:{top: 10px;}
 				 }
 				.logo-mediatrends {
 					visibility:hidden;
@@ -58,6 +63,7 @@
 					a {
 						svg {
 							min-height: 200px;
+							fill: $second_color;
 						}
 					}
 				}
