--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -8,12 +8,19 @@
 	height: 100% !important;
 	@include gridle_state(phoness tabless-min){
 		overflow:hidden;
+		padding:10px !important;
 	}
 	.page-header {
 		@include gridle(10, desktopess notebook-min);
 		@include gridle(12, phoness phoness-min tabless-min);
 		@include gridle_state(desktopess notebook-min) {
-		float:right;
+			float:right;
+		}
+		@include gridle_state(tabless-md) {
+			margin:{top: 55px;bottom:10px;}
+		}
+		@include gridle_state(phoness-min) {
+			margin:{top: 40px;}
 		}
 		@extend .no-paddings;
 		.content-header {
