--- a/prod/sass/partial/search.scss
+++ b/prod/sass/partial/search.scss
@@ -11,23 +11,31 @@
 	@include gridle_state(tabless-md tabless-min tabless) {
 		padding:0 10px;
 	} 
+	.content-title {
+		margin:{top:20px;}
+		@include gridle_state(tabless-md phoness) {
+			margin:{top:70px;}
+		}
+		@include gridle_state(phoness-min) {
+			margin:{top:50px;}
+		}
+		h2 {
+			@extend .no-margins;
+		}
+		p {
+			@extend .highlight;
+			margin:{top:10px;bottom:0;}
+			display: table;
+			width: auto;
+			text:{transform:capitalize}
+			@include gridle_state(tabless-md phoness) {
+				font:{size: 22px;}
+			}
+		}
+	}
 	.search-cont {
 		@include gridle(12);
 		@extend .no-paddings;
-		.encabezado {
-			@extend .shadow;
-			@include gridle(12);
-			background: $second_color;
-			padding: 10px;
-			@include gridle_state(phoness) {
-				margin:{top:10px;}
-			}
-			.content-title {
-				h2 {
-					@extend .no-margins;
-				}
-			}
-		}
 		.search-loop {
 			@include gridle(12);
 			@extend .shadow;
@@ -36,22 +44,37 @@
 			background: $second_color;
 			padding:20px 10px;
 			.img-search {
-				@include gridle(12);
+				@include gridle(2, desktopess); 
+				@include gridle(3, notebook-min); 
+				@include gridle(3, tabless-md phoness); 
+				@include gridle(12, phoness-min);
 				@extend .no-paddings;
-				img {
-					height: auto;
-					@include gridle(6, tabless-md tabless-min tabless);
-					@include gridle(2, notebook-min desktopess); 
-					@include gridle(5, phoness-min); 
-					@include gridle_state(phoness-min) {
-						padding:{left:0;}
-						margin:{top:0;}
+				display: table;
+				height: 85px;
+				a {
+					display: table-cell;
+					vertical-align: middle;
+					img {
+						height: auto;
+						@include gridle(8);
+						@include gridle_float(none);
+						/*@include gridle(12, desktopess notebook-min); 
+						@include gridle(6, tabless-md tabless-min);
+						@include gridle(5, phoness-min); */
+						margin: 0 auto;
+						display: block;
+						@include gridle_state(phoness) {
+							padding:0;
+						}
+						@include gridle_state(phoness-min) {
+							padding:{left:0;}
+							margin:{top:0;}
+						}
 					}
-
 				}
 			}
 			.title-resultado {
-				@include gridle(4);
+				@include gridle(3, desktopess notebook phoness);
 				@include gridle(12, phoness-min);
 				display: block;
 				font:{size:12px;family:$primary_font;}
@@ -72,23 +95,57 @@
 					}
 				}
 				.pattern {
+					height: 40px;
 					padding:{top:5px; right:5px; bottom:5px; left:3px;}
-				}
-				.resultado-2 {
-					@include gridle(11,tabless-min);
-					@include gridle_state(tabless-min) {
-						 padding:{left: 5px;}
-					}
-					@include gridle(12, phoness);
-					a {
-						@extend .highlight-inv;
-						padding:{left:3px !important;right:5px !important;}
-						font:{size:12px !important;weight:600 !important;}
-						@include gridle_state(desktopess notebook-min) {
-							font:{size: 20px !important;}
+					background-position: -0% 0;
+					@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
+					background-size: 200.22% auto;
+					@include transition(background-position 0.5s ease-out);
+					@extend .trama;
+					.highlight-inv {
+						font:{size:18px;}
+						display: table;
+						@include gridle_state(notebook-min) {
+							font:{size: 15px;}
 						}
-						@include gridle_state(phoness-min) {
-							font:{size: 16px !important;}
+						@include gridle_state(tabless-md) {
+							font:{size:14px;}
+						}
+					}
+					&.resultado-2 {
+						@include gridle(11,tabless-min);
+						@include gridle_state(tabless-min) {
+							 padding:{left: 5px;}
+						}
+						@include gridle(12, phoness);
+						.highlight-inv {
+							margin:{top: 1px;}
+							padding:{left:3px !important;right:5px !important;}
+							font:{size:12px !important;weight:600 !important;}
+							@include gridle_state(desktopess notebook-min) {
+								font:{size: 20px !important;}
+							}
+							@include gridle_state(phoness-min) {
+								font:{size: 16px !important;}
+							}
+							a {
+								color:$first_color;
+							}
+						}
+					}
+				}
+				&:hover {
+					.pattern{
+						@include transition(background-position 0.5s ease-out);
+						background-position: 99.99% 0 !important;
+						.trama{
+							svg{
+								pattern {
+									polygon {
+										@include animation(tramaFadea 0.4s ease forwards);
+									}
+								}
+							}
 						}
 					}
 				}
