--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -20,4 +20,5 @@
 @import 'partial/page-contacto';   
 @import 'partial/paginacion';    
 @import 'partial/footer';   
+@import 'partial/btn';   
 @import 'partial/queries';   
