--- a/prod/sass/partial/page-sitio.scss
+++ b/prod/sass/partial/page-sitio.scss
@@ -179,6 +179,7 @@
 									}
 									@include gridle_state(phoness) {
 										margin:{left: -4px;}
+										font:{size:11px;}
 									}
 								}
 							}	
