update single css

--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'partial/parallax';
 @import 'partial/general';   
 @import 'partial/header'; 
+@import 'partial/header-single'; 
 @import 'partial/nav'; 
 @import 'partial/page-categoria';   
 @import 'partial/page-sitio';   
