--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -11,16 +11,25 @@
 		padding:10px !important;
 	}
 	.page-header {
+		height: 370px;
+		padding:10px !important;
 		@include gridle(10, desktopess notebook-min);
 		@include gridle(12, phoness phoness-min tabless-min);
-		@include gridle_state(desktopess notebook-min) {
+		@include gridle_state(desktopess) {
 			float:right;
+		}
+		@include gridle_state(notebook-min) {
+			float:right;
+			height: 300px;
 		}
 		@include gridle_state(tabless-md) {
 			margin:{top: 55px;bottom:10px;}
+			padding:0 !important;
 		}
 		@include gridle_state(phoness-min) {
 			margin:{top: 40px;}
+			height: 210px; 
+			padding:0 !important;
 		}
 		@extend .no-paddings;
 		.content-header {
@@ -29,26 +38,24 @@
 			@include gridle_state(phoness tabless-min) {
 				padding:0;
 			}
+			@include gridle_state(notebook-min) {
+				height: 300px;
+			}
 			.encabezado {
 				@include gridle(12);
-				height: 210px;
+				height: 350px;
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: cover;
 				display: table;
-				@include gridle_state(desktopess notebook-min tabless) {
-					height: 350px;
-				}
-				@include gridle_state(tabless-min) {
+				@include gridle_state(notebook-min) {
 					height: 300px;
 				}
 				@include gridle_state(phoness phoness-min) {
 					padding:0 5px;
-					height: 300px;
 				}
 				@include gridle_state(phoness-min) {
 					padding:0 7px;
-					height: 210px; 
 				}
 				.content-title {
 					@include gridle(12);
