--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -13,6 +13,7 @@
 	.page-header {
 		height: 370px;
 		padding:10px !important;
+		overflow: hidden;
 		@include gridle(10, desktopess notebook-min);
 		@include gridle(12, phoness phoness-min tabless-min);
 		@include gridle_state(desktopess) {
@@ -40,6 +41,7 @@
 			}
 			@include gridle_state(notebook-min) {
 				height: 300px;
+				padding: 0;
 			}
 			.encabezado {
 				@include gridle(12);
