--- a/prod/sass/partial/header-single.scss
+++ b/prod/sass/partial/header-single.scss
@@ -1,213 +1,214 @@
-.single-article {
-	height: 100%;
-	width: 100%;
-	.content-header {
-		z-index: 99;
-		position: absolute;
-		font:{family:$primary_font;}
-		@extend .no-paddings;
-		height: inherit;
-		position: relative;
-		@include gridle(7,desktopess);
-		@include gridle(9,notebook-min);
-		@include gridle(10,tabless-md);
-		@include gridle(12,phoness phoness-min);
-		@include gridle_state(phoness) {
-			padding:{left:0;right:0 !important;}
-		}
-		@include gridle_state(phoness-min) {
-			padding:{left:0;right:0 !important;}
-		}
-		.encabezado {
-			overflow: visible !important;
-			.content-a {
+.page-header-sitio {
+	overflow: visible !important;
+	.single-article {
+		height: 100%;
+		width: 100%;
+		.content-header {
+			z-index: 99;
+			position: absolute;
+			font:{family:$primary_font;}
+			@extend .no-paddings;
+			height: inherit;
+			position: relative;
+			@include gridle(12);
+			@include gridle_state(phoness) {
+				padding:{left:0;right:0 !important;}
+			}
+			@include gridle_state(phoness-min) {
+				padding:{left:0;right:0 !important;}
+			}
+			.encabezado {
 				overflow: visible !important;
-				.content-b {
-					.content-float {
-						@include gridle(9);
-						height: 200px;
-						position: absolute;
-						left:0;
-						bottom:-65px; 
-						@include gridle_state(notebook-min) {
-							height: 150px;
-							bottom: -54px;
-						}
-						@include gridle_state(tabless-md) {
-							left:10px;
-						}
-						.logo-sitio {
-							@include gridle(2, desktopess notebook-min tabless-min);
-							@include gridle(3, phoness);
-							@include gridle(4, phoness-min);
-							@include border-width(3px);
-							@include border-color(#000);
-							@include border-style(solid);
-							height: 100px;
-							background: $second_color;
-							display: table;
-							padding: 0 5px;
-							@include gridle_state(desktopess) {
-								height:185px;
-							}
+				.content-a {
+					overflow: visible !important;
+					.content-b {
+						.content-float {
+							@include gridle(9);
+							height: 200px;
+							position: absolute;
+							left:0;
+							bottom:-65px; 
 							@include gridle_state(notebook-min) {
-								height: 118px;
+								height: 150px;
+								bottom: -54px;
 							}
 							@include gridle_state(tabless-md) {
-								height: 135px;
+								left:10px;
 							}
-							@include gridle_state(phoness) {
-								height: 166px;
-								padding: 0 5px !important;
-							}
-							@include gridle_state(phoness-min) {
-								height: 105px;
-								padding: 0 5px !important;
-							}
-							.img-content {
-								@include gridle(12);
-								@extend .no-paddings;
-								@include gridle_float(none);
-								display: table-cell;
-								vertical-align: middle;
-								img {
-									width: 100%;
-									height: auto;
-								}
-							}
-						}
-						h2 {
-							display:none;
-						}
-						.content-group {
-							@include gridle(10, desktopess notebook-min tabless-md tabless-min);
-							@include gridle(8, phoness phoness-min);
-							margin:{top:37px;}
-							@include gridle_state(notebook-min) {
-								margin:{top: 8px;}
-							}
-							@include gridle_state(tabless-md) {
-								padding: 6px;
-							}
-							.bajada {
-								@extend .no-paddings;
-								width: 73% !important;
-								line-height: 20px;
+							.logo-sitio {
+								@include gridle(2, desktopess notebook-min tabless-min);
+								@include gridle(3, phoness);
+								@include gridle(4, phoness-min);
+								@include border-width(3px);
+								@include border-color(#000);
+								@include border-style(solid);
+								height: 100px;
+								background: $second_color;
 								display: table;
-								width: initial !important; 
-								@include gridle_state(phoness) {
-									display: none !important;
+								padding: 0 5px;
+								@include gridle_state(desktopess) {
+									height:185px;
 								}
 								@include gridle_state(notebook-min) {
-									font:{size: 11px;}
+									height: 118px;
 								}
 								@include gridle_state(tabless-md) {
-									font:{size: 10px;}
+									height: 135px;
 								}
-								p {
-									@include gridle(9, desktopess);    
-									padding:10px !important;
+								@include gridle_state(phoness) {
+									height: 166px;
+									padding: 0 5px !important;
+								}
+								@include gridle_state(phoness-min) {
+									height: 105px;
+									padding: 0 5px !important;
+								}
+								.img-content {
+									@include gridle(12);
+									@extend .no-paddings;
+									@include gridle_float(none);
+									display: table-cell;
+									vertical-align: middle;
+									img {
+										width: 100%;
+										height: auto;
+									}
 								}
 							}
-							.btn-left {
-									@include gridle(6, desktopess notebook-min tabless-min);
-									@include gridle(12, phoness);
+							h2 {
+								display:none;
+							}
+							.content-group {
+								@include gridle(10, desktopess notebook-min tabless-md tabless-min);
+								@include gridle(8, phoness phoness-min);
+								margin:{top:37px;}
+								@include gridle_state(notebook-min) {
+									margin:{top: 8px;}
+								}
+								@include gridle_state(tabless-md) {
+									padding: 6px;
+								}
+								.bajada {
+									@extend .no-paddings;
+									width: 73% !important;
+									line-height: 20px;
+									display: table;
+									width: initial !important; 
 									@include gridle_state(phoness) {
-										padding: {right:0 !important;}
-										margin:{bottom:5px;}
-									}
-									@include gridle_state(phoness-min) {
-										padding: {right:10px !important;}
-										margin:{bottom:0;}
-									}
-									padding:{left:0 !important;right:10px !important;}
-								.pattern {
-									@include gridle(12);
-									padding:{bottom:10px;}
-									margin:{left:5px;top:10px;}
-									background-position: -0% 0;
-									@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
-									background-size: 200.22% auto;
-									@include transition(background-position 0.5s ease-out);
-									@extend .trama;	
-									@include gridle_state(desktopess notebook-min) {
-										display: inline-block;
-										margin:0 !important; 
+										display: none !important;
 									}
 									@include gridle_state(notebook-min) {
-										margin:{top: 5px; right:5px;}
+										font:{size: 11px;}
 									}
-									@include gridle_state(phoness) {
-										margin:{top: 14px !important;}
+									@include gridle_state(tabless-md) {
+										font:{size: 10px;}
 									}
-									.highlight-inv {
-										display: table;
-										font:{size:12px;}
-										@include gridle_state(desktopess) {
-											  font:{size: 18px;}
+									p {
+										@include gridle(9, desktopess);    
+										padding:10px !important;
+									}
+								}
+								.btn-left {
+										@include gridle(6, desktopess notebook-min tabless-min);
+										@include gridle(12, phoness);
+										@include gridle_state(phoness) {
+											padding: {right:0 !important;}
+											margin:{bottom:5px;}
 										}
-										@include gridle_state(tabless-md) {
-										  	font:{size: 13px;}
-											margin:{left: 5px;}
+										@include gridle_state(phoness-min) {
+											padding: {right:10px !important;}
+											margin:{bottom:0;}
+										}
+										padding:{left:0 !important;right:10px !important;}
+									.pattern {
+										@include gridle(12);
+										padding:{bottom:10px;}
+										margin:{left:5px;top:10px;}
+										background-position: -0% 0;
+										@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
+										background-size: 200.22% auto;
+										@include transition(background-position 0.5s ease-out);
+										@extend .trama;	
+										@include gridle_state(desktopess notebook-min) {
+											display: inline-block;
+											margin:0 !important; 
+										}
+										@include gridle_state(notebook-min) {
+											margin:{top: 5px; right:5px;}
 										}
 										@include gridle_state(phoness) {
-											margin:{left: -4px;}
-											font:{size:11px;}
+											margin:{top: 14px !important;}
 										}
-									}
-								}	
-								&:hover {
-									.pattern{
-										@include transition(background-position 0.5s ease-out);
-										background-position: 99.99% 0 !important;
-										.trama{
-											svg{
-												pattern {
-													polygon {
-														@include animation(tramaFadea 0.4s ease forwards);
+										.highlight-inv {
+											display: table;
+											font:{size:12px;}
+											@include gridle_state(desktopess) {
+												  font:{size: 18px;}
+											}
+											@include gridle_state(tabless-md) {
+											  	font:{size: 13px;}
+												margin:{left: 5px;}
+											}
+											@include gridle_state(phoness) {
+												margin:{left: -4px;}
+												font:{size:11px;}
+											}
+										}
+									}	
+									&:hover {
+										.pattern{
+											@include transition(background-position 0.5s ease-out);
+											background-position: 99.99% 0 !important;
+											.trama{
+												svg{
+													pattern {
+														polygon {
+															@include animation(tramaFadea 0.4s ease forwards);
+														}
 													}
 												}
 											}
 										}
 									}
 								}
-							}
-							.btn-right {
-									@include gridle(6, desktopess notebook-min tabless-min);
-									@include gridle(12, phoness);
-									@extend .no-paddings;
-									@include gridle_state(phoness-min) {
-										padding:{right:10px !important; left:0 !important;} 
-										margin: {top:5px;}
-									}
-								.btn {
-									@include gridle(12);
-									@include gridle_state(desktopess notebook-min) {
-										display: inline-block;
-										margin:0;
-									}
-									@include gridle_state(phoness phoness-min) {
-										float: left;
-									}
-									a {
-										font:{size:12px;}
-										@include gridle_state(desktopess) {
-											padding:12px !important;
+								.btn-right {
+										@include gridle(6, desktopess notebook-min tabless-min);
+										@include gridle(12, phoness);
+										@extend .no-paddings;
+										@include gridle_state(phoness-min) {
+											padding:{right:10px !important; left:0 !important;} 
+											margin: {top:5px;}
 										}
-									}
+									.btn {
+										@include gridle(12);
+										@include gridle_state(desktopess notebook-min) {
+											display: inline-block;
+											margin:0;
+										}
+										@include gridle_state(phoness phoness-min) {
+											float: left;
+										}
+										a {
+											font:{size:12px;}
+											@include gridle_state(desktopess) {
+												padding:12px !important;
+											}
+										}
+									}	
 								}	
-							}	
-						}
-						.content-title {
-							h2 {
-								display: none;
+							}
+							.content-title {
+								h2 {
+									display: none;
+								}
 							}
 						}
-					}
-				}  	
+					}  	
+				}
 			}
 		}
 	}
+
 }
 
 	
