--- a/prod/sass/partial/footer.scss
+++ b/prod/sass/partial/footer.scss
@@ -139,6 +139,8 @@
 							display: table;
 							width:100%;
 							height:100%;
+							position: absolute;
+							z-index: 999;
 							i{
 								display: table-cell;
 								vertical-align: middle;
