--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -19,6 +19,7 @@
 @import 'partial/nav-colapse';   
 @import 'partial/search';   
 @import 'partial/page-contacto';   
+@import 'partial/page-specs';   
 @import 'partial/paginacion';    
 @import 'partial/footer';   
 @import 'partial/btn';   
